fix styles with form fields so radio buttons are not wrapping

--- a/app/assets/stylesheets/cec_form_children.css.scss
+++ b/app/assets/stylesheets/cec_form_children.css.scss
@@ -1,3 +1,7 @@
 // Place all the styles related to the CECFormChildren controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.cec_form_child .controls {
+	margin-left: 330px !important;
+}
