--- a/app/assets/stylesheets/cec_forms.css.scss
+++ b/app/assets/stylesheets/cec_forms.css.scss
@@ -4,6 +4,9 @@
 
 .cec-dl-show dt {
    width: 900px !important;
-   
+
 }
 
+#cec_form .form-horizontal .controls {
+	margin-left: 10px;
+}
