--- a/app/assets/stylesheets/dec_forms.css.scss
+++ b/app/assets/stylesheets/dec_forms.css.scss
@@ -9,3 +9,7 @@
 .dec-sub {
    margin-left: 20px;
 }
+
+#dec_form .form-horizontal .controls {
+	margin-left: 10px;
+}
